--- a/Amazon Page/index.html
+++ b/Amazon Page/index.html
@@ -34,8 +34,8 @@
             </div>
 
             <div class="firstSection">
-                <p class="sectionTitle">Find the perfect gift </p>
-                <p class="sectionLink"><a href="#"> Shop now</a></p>
+                <p class="sectionTitle">Find the perfect gift <a href="#"> Shop now</a> </p>
+
 
                 <img src="assets/images/img_1.jpg" alt="kindle">
                 <img src="assets/images/img_2.jpg" alt="scrivania con oggetti">
@@ -45,18 +45,16 @@
 
             <div class="secondSection">
                 <img src="assets/images/img_9.png" alt="VR">
-                <p class="sectionTitle"> Play the gifting game </p>
-                <p class="sectionLink"> <a href="#"> Shop gaming </a> </p>
+                <p class="sectionTitle"> Play the gifting game <a href="#"> Shop gaming </a> </p>
 
                 <img src="assets/images/img_10.png" alt="oggetti">
-                <p class="sectionTitle"> The sound of cheer </p>
-                <p class="sectionLink"> <a href="#"> Shop Audio & Accessories </a> </p>
+                <p class="sectionTitle"> The sound of cheer  <a href="#"> Shop Audio & Accessories </a> </p>
             </div>
         </main>
 
         <footer>
             <div id="anchor">
-                <a href="#" id="logo"> Back to top </a>
+                <a href="#" id="container"> Back to top </a>
             </div>
             <div id="footerLogo">
                 <img src="assets/images/logo.png" alt="logo">
